# codekit

./: pyproject.toml  setup.py
.github/workflows/: build.yaml  test.yaml
codekit/: codetools.py  eups.py  pygithub.py
codekit/cli/: github_fork_org.py  github_tag_teams.py
docker/: Dockerfile
tests/eups/: test_eupstag.py
